# msh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.bones/events/: 2026-03.events
src/: main.rs
src/glb/: inspect.rs  mod.rs
src/mesh/: animation.rs  bvh.rs  bvh_mapping.rs  loader.rs  mod.rs  processing.rs  skeleton.rs
src/remote/: client.rs  mod.rs
src/rpc/: methods.rs  mod.rs  server.rs  types.rs
src/viewer/: bvh_viewer.rs  camera.rs  gpu.rs  headless.rs  mesh_renderer.rs  mod.rs  render.rs  renderdoc_helper.rs  rpc_viewer.rs  sprite_sheet.rs  state.rs  ui_renderer.rs
src/viewer/shaders/: mesh.wgsl
