[package]
name = "mshmash"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for 3D mesh analysis, repair, and visualization"
license = "MIT"
repository = "https://github.com/bobisme/msh"
keywords = ["mesh", "3d", "remeshing", "cli"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "msh"
path = "src/main.rs"

[dependencies]
baby_shark = "0.3.12"
clap = { version = "4.5.49", features = ["derive"] }
gltf = "1.4.1"
kiss3d = { version = "0.36.0", features = ["vertex_index_u32"] }
