[package]
name = "mshmash"
version = "0.2.0"
edition = "2024"
description = "A CLI tool for 3D mesh analysis, repair, and visualization"
license = "MIT"
repository = "https://github.com/bobisme/msh"
keywords = ["mesh", "3d", "remeshing", "cli"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "msh"
path = "src/main.rs"

[dependencies]
baby_shark = "0.3.12"
clap = { version = "4.5.49", features = ["derive"] }
gltf = { version = "1.4.1", features = ["extras", "names"] }
kiss3d = { version = "0.36.0", features = ["vertex_index_u32"] }
serde_json = "1.0.145"
