[package]
name = "mshmash"
version = "0.2.0"
edition = "2024"
description = "A CLI tool for 3D mesh analysis, repair, and visualization"
license = "MIT"
repository = "https://github.com/bobisme/msh"
keywords = ["mesh", "3d", "remeshing", "cli"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "msh"
path = "src/main.rs"

[features]
default = []
remote = ["dep:jsonrpsee", "dep:tokio", "dep:crossbeam"]
renderdoc = ["dep:renderdoc"]

[dependencies]
baby_shark = "0.3.12"
clap = { version = "4.5.49", features = ["derive"] }
gltf = { version = "1.4.1", features = ["extras", "names"] }
kiss3d = { version = "0.37", features = ["vertex_index_u32"] }
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"

# Remote control dependencies (feature-gated)
jsonrpsee = { version = "0.26", features = [
  "http-client",
  "server",
  "macros",
], optional = true }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
], optional = true }
crossbeam = { version = "0.8", optional = true }

# RenderDoc integration (feature-gated)
renderdoc = { version = "0.12", optional = true }
